# croupier-sdk-cpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD_AND_TEST_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.optimized  CMakeLists.txt.simplified  CMakePresets.json  COMPLETE_SDK_README.md  CONFIG_GUIDE.md  HOMEBREW_FIX.md  PLUGIN_GUIDE.md  README.md  SECURITY.md  STANDALONE_BUILD.md  TEST_EXECUTION_REPORT.md  VERSION.cmake  VERSIONING.md  VIRTUAL_OBJECT_REGISTRATION.md  buf.gen.yaml  build.bat  build_debug.bat  build_release.bat  build_tests.bat  codecov.yml  run_tests.bat  run_tests_direct.bat  standalone-build.sh  vcpkg.json  vcpkg.json.bak
.github/workflows/: ci.yml  cpp-sdk-build.yml  deploy-docs.yml  nightly.yml  release.yml
build-md/: ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  croupier-cpp-sdk.sln  croupier-sdk-static.vcxproj  croupier-sdk-static.vcxproj.filters
build-md/croupier-sdk-static.dir/Release/croupier.E3F4BAAC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  croupier-sdk-static.lastbuildstate
build-md/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-md/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-mt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  croupier-cpp-sdk.sln  croupier-sdk-static.vcxproj  croupier-sdk-static.vcxproj.filters
build-mt/croupier-sdk-static.dir/Release/: croupier-sdk-static.lib.recipe
build-mt/croupier-sdk-static.dir/Release/croupier.D1C23F04.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-test/: ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  croupier-cpp-sdk.sln  croupier-sdk-static.vcxproj  croupier-sdk-static.vcxproj.filters  croupier-sdk-tests.vcxproj  croupier-sdk-tests.vcxproj.filters
build-test/croupier-sdk-static.dir/Release/: croupier-sdk-static.lib.recipe
build-test/croupier-sdk-tests.dir/Release/: croupier-sdk-tests.exe.recipe
cmake/: ProtoGeneration.cmake  vcpkg-bootstrap.cmake  vcpkg-chainload-osx.cmake
configs/examples/: development.json  production.json
docs/: INTEGRATION.md  README.md  RUNTIME_LIBRARY_FIX.md  conventions.md  package.json  test-implementation-progress.md
docs/.vuepress/: config.ts
docs/api/: README.md  client.md  config.md  functions.md  virtual-objects.md
docs/configuration/: README.md  client-config.md  environments.md  security.md
docs/examples/: README.md  basic-function.md  comprehensive.md  plugin.md  virtual-object.md
docs/guide/: README.md  architecture.md  building.md  deployment.md  functions.md  installation.md  plugins.md  quick-start.md  testing.md  threading.md  virtual-objects.md
docs/guides/: integration.md
docs/plans/: 2026-02-02-lua-binding-sol2-implementation.md  2026-02-02-lua-binding-sol2-refactor.md
examples/: complete_example.cpp  comprehensive_demo.cpp  config_example.cpp  example.cpp  plugin_demo.cpp  production_example.cpp  virtual_object_demo.cpp
examples/plugins/: example_plugin.cpp
include/croupier/protocol/: message.h
include/croupier/sdk/: config_driven_loader.h  config_manager.h  croupier_client.h  grpc_service.h  logger.h  nng_transport.h  protocol.h  tcp_transport.h
include/croupier/transport/: client.h  server.h
lua/croupier/: init.lua
lua/examples/: standalone_example.lua
proto/: README.md  buf.gen.yaml  buf.yaml
scripts/: bootstrap-vcpkg.ps1  bootstrap-vcpkg.sh  build-macos.sh  build-optimized.sh  build.ps1  build.sh
skynet/: README.md
skynet/examples/: README.md  config.lua  main.lua  simple_example.lua  start.sh
skynet/service/: croupier_service.lua
src/: client.cpp  config_driven_loader.cpp  config_manager.cpp  croupier_client.cpp  grpc_service.cpp  message.cpp  nng_transport.cpp  server.cpp  tcp_transport.cpp
src/bindings/: lua_binding.cpp  lua_binding.h  lua_binding_sol2.cpp
src/config/: client_config_loader.cpp
src/plugin/: dynamic_loader.cpp
src/utils/: file_utils.cpp  json_utils.cpp
tests/: test_client_components.cpp  test_client_connection.cpp  test_client_function_registration.cpp  test_client_initialization.cpp  test_client_lifecycle.cpp  test_client_virtual_objects.cpp  test_concurrency.cpp  test_config_defaults.cpp  test_config_environment.cpp  test_config_loading.cpp  test_config_manager.cpp  test_config_merge.cpp  test_config_network.cpp  test_config_profiles.cpp  test_config_security.cpp  test_data_validation.cpp  test_dynamic_library.cpp  test_edge_cases.cpp  test_error_recovery.cpp  test_file_utils.cpp  test_grpc_connection.cpp  test_grpc_function_service.cpp  test_grpc_heartbeat.cpp  test_grpc_jobs.cpp  test_grpc_local_server.cpp  test_grpc_reconnect.cpp  test_grpc_registration.cpp  test_integration.cpp  test_invoker.cpp  test_invoker_fallback.cpp  test_json_utils.cpp  test_main_thread_dispatcher.cpp  test_nng_transport.cpp  test_performance.cpp  test_plugin_registry.cpp  test_security.cpp  test_transport.cpp  test_utils.cpp  test_virtual_objects.cpp
tests/mock/: mock_agent.cpp  mock_agent.h
vcpkg-overlays/grpc/: fix-xcode16-variant.patch  portfile.cmake  vcpkg.json
vcpkg-overlays/ports/grpc/: vcpkg.json
vcpkg-overlays/ports/utf8-range/: portfile.cmake  vcpkg.json
vcpkg-overlays/triplets/: README.md  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows-static-md.cmake  x64-windows-static-mt.cmake
vcpkg-overlays/utf8-range/: fix-cmake.patch  portfile.cmake  vcpkg.json
(+100 files in other folders)
